- added parameter <constraints/indicator/removeIndicators> to remove indicator constraints if corresponding vub has been added
- change default value of parameter "nodeselection/restartdfs/selectbestfreq" 100
- added parameter "nodeselection/restartdfs/countonlyleafs" in node selector restart dfs which can be used to select 
  the counting process of processed nodes 

SCIP version 2.0.0
===============

interface:
- new method SCIPbranchruleGetNRelaxCalls() to get the total number of times, a particular branching rule was called 
  on a relaxation solutions
- new method SCIPpermuteArray() that randomly shuffles an array using the Fisher-Yates algorithm
- new method SCIPgetRandomSubset() that draws a random subset of disjoint elements from a given set of disjoint elements
- new method SCIPpermuteProb() that randomly permutes constraints and variables
- new method SCIPrestartSolve() that allows the user to manually restart the solving process
- new method SCIPbranchRelax() to branch on a relaxation solution
- new method SCIPbranchVarVal() to branch on an arbitrary value within the variable's bounds
- new method SCIPbranchGetBranchingPoint() and SCIPgetBranchingPoint() to select branching point for a variable,
  e.g., ensure branching point is inside the interval for a continuous variable
- new callback SCIP_DECL_BRANCHEXECRELAX(), together with new parameter in SCIPincludeBranchrule() for branching on a relaxation solution
- added SCIPsortPtrPtrInt (and various other) and corresponding sorting/inserting/deleting methods in pub_misc.h and necessary defines in misc.c
- added to the callback method SCIP_DECL_PROBEXITSOL(x) (type_prob.h) the parameter restart; 
  this parameter is set to TRUE if the exit solve call was triggered by a restart?
- new method SCIPswapPointers()
- new method SCIPexecRelpscostBranching() in branch_relpscost.{c,h}; this method allows of calling the reliability pseudo cost branching algorithm 